tests/src/negative/wrongArgs.py
def f(x : int) -> int:
    return 0

f("2")
